--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "bunyan": "~1.8.8",
     "metallic-errors": "^0.1.1",
     "metallic-listeners": "^0.1.0",
-    "read-pkg-up": "^2.0.0"
+    "read-pkg-up": "~2.0.0"
   },
   "scripts": {
     "build": "babel src -d lib --source-maps inline",
