--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   "devDependencies": {
     "babel-cli": "6.23.0",
     "babel-plugin-transform-es2015-modules-commonjs": "6.23.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-object-rest-spread": "6.23.0",
     "istanbul": "0.4.5",
     "mocha": "3.2.0",
     "sinon": "1.17.7",
