--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "build": "babel src -d lib --source-maps inline",
     "build:watch": "npm run build -- --watch",
     "coverage": "istanbul cover _mocha lib/test/ -- --recursive",
-    "lint": "standard \"src/**/*.js\"",
+    "lint": "standard \"src/**/*.js\" \"test/**/*.js\"",
     "postversion": "git push && git push --tags",
     "prepublish": "npm run build",
     "pretest": "npm run lint",
@@ -56,13 +56,8 @@
     "standard": "9.0.1"
   },
   "standard": {
-    "globals": [
-      "describe",
-      "it",
-      "before",
-      "beforeEach",
-      "after",
-      "afterEach"
-    ]
+    "env": {
+      "mocha": true
+    }
   }
 }
