--- a/package.json
+++ b/package.json
@@ -27,11 +27,15 @@
     "test": "src/test"
   },
   "dependencies": {
-    "bunyan": "^1.8.8",
+    "babel-cli": "^6.24.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.0",
+    "bunyan": "^1.8.9",
     "metallic-errors": "^0.1.1",
     "metallic-interfaces": "^0.1.0",
     "metallic-listeners": "^0.1.0",
-    "read-pkg-up": "^2.0.0"
+    "read-pkg-up": "^2.0.0",
+    "source-map-support": "^0.4.14",
+    "standard": "^9.0.2"
   },
   "scripts": {
     "build": "babel src -d lib --source-maps inline",
@@ -46,14 +50,14 @@
     "test:watch": "npm run test -- -w"
   },
   "devDependencies": {
-    "babel-cli": "^6.23.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.23.0",
+    "babel-cli": "^6.24.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
-    "sinon": "^1.17.7",
-    "source-map-support": "^0.4.11",
-    "standard": "^9.0.1"
+    "sinon": "^2.1.0",
+    "source-map-support": "^0.4.14",
+    "standard": "^9.0.2"
   },
   "standard": {
     "env": {
