--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "scripts": {
     "build": "babel src -d lib --source-maps inline",
     "build:watch": "npm run build -- --watch",
-    "coverage": "istanbul cover _mocha lib/test/ -- --recursive",
+    "coverage": "nyc --reporter=lcov npm test",
     "lint": "standard \"src/**/*.js\" \"test/**/*.js\"",
     "postversion": "git push && git push --tags",
     "prepublish": "npm run build",
@@ -49,8 +49,8 @@
     "babel-cli": "^6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
+    "nyc": "^10.2.0",
     "sinon": "^2.1.0",
     "source-map-support": "^0.4.14",
     "standard": "^10.0.1"
